# AiSOC

./: .env.example  .gitignore  AGENTS.md  AI_STACK_PLAN_PROGRESS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.demo.yml  docker-compose.yml  package.json  playbook.schema.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.base.json  turbo.json
services/actions/: Dockerfile  pyproject.toml
services/actions/app/: main.py
services/actions/app/api/: router.py
services/actions/app/clients/: aisoc_direct_client.py  fleetdm_client.py  osctrl_client.py  osquery_allowlist.py
services/actions/app/executors/: base.py  endpoint.py  network.py  notification.py  osquery.py
services/actions/app/models/: action.py
services/actions/app/services/: blast_radius.py  executor_registry.py
services/agents/: Dockerfile  pyproject.toml
services/agents/app/: main.py
services/agents/app/agents/: enrichment_agent.py  investigation_agent.py  triage_agent.py
services/agents/app/api/: contextual.py  copilot.py  hunt_search.py  investigate.py  playbooks.py  router.py  triage.py
services/agents/app/core/: telemetry.py
services/agents/app/graph/: workflow.py
services/agents/app/investigator/: __init__.py  forensic_agent.py  ledger.py  orchestrator.py  prompt_sanitizer.py  recon_agent.py  report_writer_agent.py  responder_agent.py  state.py  tools.py
services/agents/app/llm/: contract.py
services/agents/app/models/: state.py
services/agents/app/nl_query/: translator.py
services/agents/app/orchestrator/: report.py  router.py
services/agents/app/playbook/: __init__.py  engine.py  models.py  store.py  templates.py
services/agents/app/tools/: enrichment.py  mitre.py  mitre_full.py
services/agents/data/playbooks/: phishing-triage.playbook.json  ransomware-response.playbook.json
services/agents/tests/: test_alert_reduction.py  test_audit_helpers.py  test_detection_fp_rate.py  test_investigate_router_flag.py  test_investigation_completeness.py  test_llm_contract_extra.py  test_llm_contract_http.py  test_llm_contract_no_bypass.py  test_llm_resolver.py  test_mitre_accuracy.py  test_orchestrator_router_stream.py  test_orchestrator_router_stream_kwargs.py  test_prompt_sanitizer.py  test_response_quality.py  test_router_report.py  test_triage_endpoint.py
services/agents/tests/eval_data/: synthetic_incidents.json
services/api/: Dockerfile  pyproject.toml
services/api/app/: __init__.py  main.py
services/api/app/auth/: __init__.py  oidc.py  saml.py
services/api/app/core/: config.py  logging.py  security.py  telemetry.py
services/api/app/db/: database.py  neo4j.py  rls.py
services/api/app/graphql/: __init__.py  query.py  schema.py  types.py
services/api/app/middleware/: audit_middleware.py  demo_mode.py
services/api/app/models/: __init__.py  alert.py  audit.py  case.py  compliance.py  connector.py  detection_rule.py  investigation.py  rbac.py  responder.py  sla.py  tenant.py  waitlist.py
services/api/app/scripts/: __init__.py  demo_seed.py  run_migrations.py  seed_demo.py
services/api/app/services/: audit.py  audit_export.py  compliance.py  esql_runner.py  graph_service.py  plugin_manager.py  rule_engine.py  sla.py
services/api/app/workers/: hunt_scheduler.py
services/api/clickhouse/: 001_init.sql
services/api/compliance_frameworks/: dora.yaml  hipaa.yaml  iso27001.yaml  nist_csf.yaml  pci_dss.yaml
services/api/migrations/: 001_init.sql  002_rls.sql  003_rbac.sql  004_audit_log.sql  005_compliance.sql  006_compliance_frameworks.sql  007_sla.sql  008_investigation_ledger.sql  009_responder_pwa.sql  025_connectors_click_and_connect.sql  042_alerts_schema_drift_fix.sql  042_waitlist.sql  043_tenant_provision.sql
services/api/tests/: test_audit_export.py  test_case_fanout.py  test_db_url_normalize.py  test_demo_mode.py  test_esql_runner.py  test_funnel_and_pipeline.py  test_graphql.py  test_hunt_scheduler_execute.py  test_plugin_manager.py  test_tenant_provision.py  test_waitlist.py
services/connectors/: Dockerfile  pyproject.toml
services/connectors/app/: main.py
services/connectors/app/api/: router.py
services/connectors/app/connectors/: __init__.py  aisoc_direct.py  aws_cloudtrail.py  aws_guardduty.py  aws_security_hub.py  aws_vpc_flow.py  base.py  crowdstrike.py  kubernetes_audit.py  microsoft_sentinel.py  okta.py  orca.py  prisma_cloud.py  splunk.py
services/connectors/tests/: test_aws_cloudtrail.py  test_aws_guardduty.py  test_aws_vpc_flow.py  test_kubernetes_audit.py  test_orca.py  test_prisma_cloud.py
services/fusion/: Dockerfile  pyproject.toml
services/fusion/app/: main.py
services/fusion/app/api/: router.py
services/fusion/app/core/: config.py  logging.py
services/fusion/app/models/: alert.py
services/fusion/app/services/: correlator.py  deduplicator.py  fusion_engine.py  ml_scorer.py
services/fusion/app/workers/: consumer.py
services/honeytokens/: Dockerfile  alembic.ini  pyproject.toml
services/honeytokens/alembic/: env.py
services/honeytokens/alembic/versions/: 0001_initial_honeytoken_tables.py
services/honeytokens/app/: main.py
services/honeytokens/app/api/: routes.py
services/honeytokens/app/core/: config.py
services/honeytokens/app/models/: honeytoken.py
services/honeytokens/app/services/: alerting.py  generator.py
services/osquery-tls/: Dockerfile  alembic.ini  pyproject.toml
services/osquery-tls/app/: main.py
services/osquery-tls/app/core/: config.py  security.py
services/osquery-tls/app/db/: base.py  env.py  session.py
services/osquery-tls/app/models/: __init__.py  distributed_query.py  fim_event.py  node.py  pack_assignment.py
services/osquery-tls/tests/: conftest.py  test_config.py  test_distributed.py  test_enroll.py  test_log.py
services/threatintel/: Dockerfile  pyproject.toml
services/threatintel/app/: config.py  main.py
services/ueba/: Dockerfile  alembic.ini  pyproject.toml
services/ueba/alembic/: env.py
services/ueba/app/: main.py
services/ueba/app/api/: routes.py
(+1237 files in other folders)
