[tool.poetry]
name = "aisoc-actions"
version = "0.1.0"
description = "AiSOC Action Execution Service - blast-radius gated response actions with rollback"
authors = ["Cyble <opensource@cyble.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
structlog = "^24.1.0"
httpx = "^0.26.0"
aiokafka = "^0.10.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
