[tool.poetry]
name = "aisoc-actions"
version = "0.1.0"
description = "AiSOC Action Execution Service - blast-radius gated response actions with rollback"
authors = ["Beenu Arora <beenu@cyble.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.109,<0.137"
uvicorn = {extras = ["standard"], version = ">=0.27,<0.47"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
redis = {extras = ["hiredis"], version = ">=5.0.1,<8.0.0"}
asyncpg = ">=0.29.0,<0.32"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
structlog = ">=24.1,<26.0"
httpx = ">=0.27,<0.29"
aiokafka = ">=0.10,<0.15"
python-dateutil = "^2.8.2"
cryptography = ">=42,<49"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4,<10.0"
pytest-asyncio = ">=0.23,<1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
