[tool.poetry]
name = "aisoc-api"
version = "0.1.0"
description = "AiSOC Core API Service - Open-source AI Security Operations Center by Cyble"
authors = ["Cyble <opensource@cyble.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
sqlalchemy = { version = "^2.0.30", extras = ["asyncio"] }
asyncpg = "^0.29.0"
alembic = "^1.13.1"
redis = { version = "^5.0.4", extras = ["hiredis"] }
httpx = "^0.27.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-multipart = "^0.0.9"
tenacity = "^8.3.0"
structlog = "^24.1.0"
prometheus-client = "^0.20.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
opentelemetry-instrumentation-sqlalchemy = "^0.45b0"
clickhouse-driver = "^0.2.8"
boto3 = "^1.34.0"
neo4j = "^5.19.0"
pysigma = "^0.11.0"
pysigma-backend-opensearch = "^1.0.0"
yara-python = "^4.5.0"
pyyaml = "^6.0.1"
strawberry-graphql = { version = "^0.236.0", extras = ["fastapi"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.4.4"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
