[tool.poetry]
name = "aisoc-api"
version = "0.1.0"
description = "AiSOC Core API Service — Open-source AI Security Operations Center"
authors = ["Beenu Arora <beenu@cyble.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
pydantic = ">=2.7,<2.11"
pydantic-settings = "^2.2.1"
sqlalchemy = { version = "^2.0.30", extras = ["asyncio"] }
asyncpg = ">=0.29.0,<0.32"
alembic = "^1.13.1"
redis = { version = ">=5.0.4,<8.0.0", extras = ["hiredis"] }
httpx = ">=0.27,<0.29"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
PyJWT = "^2.8.0"  # Used by OIDC and SAML auth flows (separate from python-jose)
cryptography = ">=42,<49"  # Direct dep for credential vault Fernet
bcrypt = ">=4.1.2,<6.0.0"  # Used directly by app.core.security (passlib is no longer compatible with bcrypt >= 4)
python-multipart = "^0.0.9"
tenacity = ">=8.3,<10.0"
structlog = "^24.1.0"
prometheus-client = ">=0.20,<0.26"
opentelemetry-sdk = "^1.24.0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
opentelemetry-instrumentation-sqlalchemy = "^0.45b0"
clickhouse-driver = "^0.2.8"
# sqlglot powers the tenant-lake SQL rewriter (Workstream 7). We use it to
# parse user-supplied SELECTs, enforce a table allowlist, and inject the
# mandatory `tenant_id = '<uuid>'` predicate into every relation (including
# subqueries) before the statement is forwarded to ClickHouse. Pinned with
# a wide range because sqlglot ships frequent dialect tweaks and we don't
# want lockstep upgrades; the rewriter is exercised by unit tests.
sqlglot = ">=23.0.0,<31.0.0"
boto3 = "^1.34.0"
neo4j = ">=5.19,<7.0"
pysigma = "^0.11.0"
pysigma-backend-opensearch = "^1.0.0"
yara-python = "^4.5.0"
pyyaml = "^6.0.1"
strawberry-graphql = { version = ">=0.236,<0.316", extras = ["fastapi"] }
webauthn = "^2.2.0"
weasyprint = "^62.0"          # WS-G2: server-side PDF generation from print-ready HTML

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2,<10.0"
pytest-asyncio = ">=0.23.6,<1.4.0"
pytest-cov = ">=5,<8"
httpx = ">=0.27,<0.29"
ruff = "^0.4.4"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff config lives in the repo-root `ruff.toml` so the CI gate is consistent
# across services. Don't add `[tool.ruff]` here — it would shadow the root.

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as requiring a live Postgres + alembic-migrated schema (run explicitly with AISOC_RUN_INTEGRATION=1)",
]
