[tool.poetry]
name = "aisoc-fusion"
version = "0.1.0"
description = "AiSOC Alert Fusion Service - deduplication, correlation and incident grouping"
authors = ["Cyble <opensource@cyble.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
aiokafka = "^0.10.0"
aioredis = "^2.0.1"
redis = {extras = ["hiredis"], version = "^5.0.1"}
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
httpx = "^0.26.0"
python-dateutil = "^2.8.2"
simhash = "^2.1.2"
scikit-learn = "^1.4.0"
lightgbm = "^4.3.0"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
