[tool.poetry]
name = "aisoc-osquery-tls"
version = "0.1.0"
description = "AiSOC osquery TLS plugin service — direct osqueryd TLS endpoint without a separate fleet manager"
authors = ["AiSOC Community"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
pydantic = ">=2.7,<2.11"
pydantic-settings = "^2.2.1"
sqlalchemy = { version = "^2.0.30", extras = ["asyncio"] }
asyncpg = ">=0.29.0,<0.32"
alembic = "^1.13.1"
httpx = ">=0.27,<0.29"
structlog = "^24.1.0"
prometheus-client = ">=0.20,<0.26"
cryptography = "^42.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = ">=0.23.6,<1.4.0"
pytest-cov = "^5.0.0"
httpx = ">=0.27,<0.29"
ruff = "^0.4.4"
mypy = "^1.10.0"
aiosqlite = ">=0.19,<0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
