[tool.poetry]
name = "aisoc-threatintel"
version = "0.1.0"
description = "AiSOC Threat Intelligence Feed Service — TAXII/STIX/MISP/OTX ingestion"
authors = ["Cyble <opensource@cyble.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
taxii2-client = "^2.3.0"
stix2 = "^3.0.1"
apscheduler = "^3.10.4"
opensearch-py = {extras = ["async"], version = "^2.7.0"}
qdrant-client = {extras = ["fastembed"], version = "^1.9.0"}
neo4j = "^5.19.0"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
python-dateutil = "^2.8.2"
aiokafka = "^0.10.0"
mmh3 = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
