[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aisoc-ueba"
version = "0.1.0"
description = "AiSOC UEBA — User & Entity Behaviour Analytics microservice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiokafka>=0.10.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "httpx>=0.27.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]
